# TensorRT-CenterNet-3D

./: CMakeLists.txt  README.md  buildEngine  gitthis.sh  runDet
include/: ctdetConfig.h
lib/: libnvonnxparser.so.0  libnvonnxparser.so.0.1.0  libnvonnxparser_runtime.so.0  libnvonnxparser_runtime.so.0.1.0
onnx-tensorrt/: CMakeLists.txt
src/: CMakeLists.txt
